# clipper

./: .gitignore  Clipper.alfredworkflow  LICENSE  Pipfile  README.md  main.py  pyproject.toml  requirements.txt
clipper/: __main__.py  alfred.py  cli.py  clipper.py  colors.py  config.py  highlighter.py  langauge_data.py  language_data.py  languages.py  menus.py  printer.py  search.py  snippet.py  util.py
scripts/: parse_lexers.py
test/: __main__.py  test_snippet.py  test_util.py
