[project]
name = "clipper"
dynamic = ["version"]
dependencies = [
  "pick",
  "Pygments",
  "pyperclip",
  "PyYAML",
  "regex"
]

[project.scripts]
clipper = "clipper.cli:main"

[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["clipper"]

[tool.setuptools_scm]
version_file = "clipper/_version.py"